--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <description>Promotion of ueditor,support custom upload file destination.</description>
     <developers>
         <developer>
             <name>tianshouzhi</name>
