--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>xueditor</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0</version>
-
+    <name>xueditor</name>
     <url>https://github.com/tianshouzhi/xueditor</url>
     <description>Promotion of ueditor,support custom upload file destination.</description>
     <developers>
